load server url async

--- a/app/views/clusters/_info.html.erb
+++ b/app/views/clusters/_info.html.erb
@@ -1,3 +1,7 @@
-<div class="text-sm text-gray-500">
-  <%= K8::Client.new(K8::Connection.new(cluster, current_user)).server %>
-</div>
+<%= render(
+  "shared/partials/async_renderer",
+  view_model: Async::K8::InfoViewModel.new(
+    current_user,
+    cluster_id: cluster.id
+  )
+) %>
