--- a/app/views/accounts/account_users/index.html.erb
+++ b/app/views/accounts/account_users/index.html.erb
@@ -68,7 +68,7 @@
             </label>
             <%= form.text_field :email, type: :email, class: "input input-bordered w-full focus:outline-offset-0" %>
             <label class="label">
-              <span class="label-text-alt">Use the email associated with their Canine account.</span>
+              <span class="label-text-alt">An invitation email will be sent if the user doesn't have an account.</span>
             </label>
           </div>
           <div class="form-footer">
