--- a/app/views/shared/_right_nav.html.erb
+++ b/app/views/shared/_right_nav.html.erb
@@ -14,7 +14,7 @@
         <%#= link_to t(".api_tokens"), api_tokens_path, class: 'text-gray-800 bg-white hover:bg-primary-50 dark:text-gray-50 dark:bg-gray-800 dark:hover:bg-primary-800 transition ease-in-out duration-200 whitespace-nowrap no-underline block px-6 py-3' if Jumpstart.config.payments_enabled? %>
         <%= link_to edit_user_registration_path do %>
           <iconify-icon icon="lucide:user" height="16"></iconify-icon>
-          Account
+          Profile
         <% end %>
         <%= link_to account_users_path do %>
           <iconify-icon icon="lucide:users" height="16"></iconify-icon>
