Fix mobile navbar dropdown not navigating on tap
The dropdown was using CSS focus-based visibility which caused links
to not work on mobile - tapping a link would blur the dropdown first,
hiding it before the click event could fire.

Replaced with a Stimulus controller that toggles dropdown-open class.

--- a/app/views/shared/_right_nav.html.erb
+++ b/app/views/shared/_right_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="ml-auto">
-  <div class="dropdown ml-auto dropdown-end dropdown-bottom">
-    <label tabindex="0" class="btn btn-ghost rounded-btn px-1.5 hover:bg-base-content/20">
+  <div class="dropdown ml-auto dropdown-end dropdown-bottom" data-controller="dropdown">
+    <label class="btn btn-ghost rounded-btn px-1.5 hover:bg-base-content/20" data-action="click->dropdown#toggle">
       <div aria-label="Avatar photo" class="avatar">
         <div class="mask mask-squircle" style="width: 30px; height: 30px">
           <%= image_tag avatar_path(current_user, size: 40) %>
