--- a/app/views/projects/notifiers/_notifier.html.erb
+++ b/app/views/projects/notifiers/_notifier.html.erb
@@ -1,5 +1,4 @@
 <tr id="<%= dom_id(notifier) %>">
-  <td><%= notifier.name %></td>
   <td>
     <span class="badge badge-outline">
       <%= notifier.provider_type.titleize %>
@@ -18,7 +17,7 @@
       "Delete",
       project_notifier_path(notifier.project, notifier),
       method: :delete,
-      data: { turbo_confirm: "Are you sure you want to delete notifier #{notifier.name}?" },
+      data: { turbo_confirm: "Are you sure you want to delete this #{notifier.provider_type} notifier?" },
       class: "btn btn-sm btn-ghost text-error"
     ) %>
   </td>
