--- a/app/views/projects/volumes/new.html.erb
+++ b/app/views/projects/volumes/new.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "new_volume" do %>
+<%= turbo_frame_tag "volumes" do %>
   <h3 class="text-lg font-bold">New Volume</h3>
   <%= render "projects/volumes/form", volume: @volume %>
 <% end %>
