--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -87,17 +87,25 @@
 }
 
 .alert-success {
-  @apply !bg-success/10 !text-success !border-0;
+  background-color: oklch(var(--su) / 0.1) !important;
+  color: oklch(var(--su)) !important;
+  border: 0 !important;
 }
 
 .alert-error {
-  @apply !bg-error/10 !text-error !border-0;
+  background-color: oklch(var(--er) / 0.1) !important;
+  color: oklch(var(--er)) !important;
+  border: 0 !important;
 }
 
 .alert-warning {
-  @apply !bg-warning/10 !text-warning !border-0;
+  background-color: oklch(var(--wa) / 0.1) !important;
+  color: oklch(var(--wa)) !important;
+  border: 0 !important;
 }
 
 .alert-info {
-  @apply !bg-info/10 !text-info !border-0;
+  background-color: oklch(var(--in) / 0.1) !important;
+  color: oklch(var(--in)) !important;
+  border: 0 !important;
 }
