--- a/app/views/projects/deployments/_status.html.erb
+++ b/app/views/projects/deployments/_status.html.erb
@@ -13,7 +13,7 @@
       "error"
     end
   %>
-  <div aria-label="Badge" class="badge border-0 bg-<%= badge_color %>/10 font-medium capitalize text-<%= badge_color %>">
+  <div aria-label="Badge" class="badge badge-<%= badge_color %> font-medium capitalize">
     <%= status %>
     <% if status == "pending" %>
       <iconify-icon class="ml-1 animate-spin" icon="lucide:loader-circle"></iconify-icon>
