--- a/app/views/clusters/_status.html.erb
+++ b/app/views/clusters/_status.html.erb
@@ -15,7 +15,7 @@
   end
 %>
 <div class="flex items-center gap-2">
-  <div aria-label="Badge" class="badge border-0 bg-<%= badge_color %>/10 font-medium capitalize text-<%= badge_color %>">
+  <div aria-label="Badge" class="badge badge-<%= badge_color %> font-medium capitalize">
     <%= cluster.status %>
   </div>
   <% if cluster.status == "failed" %>
