--- a/app/views/clusters/build_clouds/_status.html.erb
+++ b/app/views/clusters/build_clouds/_status.html.erb
@@ -17,7 +17,7 @@
   end
 %>
 <div class="text-right">
-  <div aria-label="Badge" class="badge border-0 bg-<%= badge_color %>/10 font-medium capitalize text-<%= badge_color %>">
+  <div aria-label="Badge" class="badge badge-<%= badge_color %> font-medium capitalize">
     <%= build_cloud.status.humanize %>
     <% if build_cloud.updating? || build_cloud.installing? %>
       <iconify-icon class="ml-1 animate-spin" icon="lucide:loader-circle"></iconify-icon>
