--- a/app/views/projects/services/domains/_list.html.erb
+++ b/app/views/projects/services/domains/_list.html.erb
@@ -10,7 +10,14 @@
   <tbody>
     <% service.domains.each do |domain| %>
       <tr id="<%= dom_id(domain) %>">
-        <td><%= link_to domain.domain_name, "https://#{domain.domain_name}", target: "_blank" %></td>
+        <td>
+          <%= link_to domain.domain_name, "https://#{domain.domain_name}", target: "_blank" %>
+          <% if domain.auto_managed? %>
+            <div class="tooltip tooltip-right inline-block ml-2" data-tip="Automatically managed by Canine">
+              <span class="badge badge-sm badge-info">Auto</span>
+            </div>
+          <% end %>
+        </td>
         <td>
           <%= render(
             "shared/partials/async_renderer",
