--- a/app/views/projects/services/domains/_status.html.erb
+++ b/app/views/projects/services/domains/_status.html.erb
@@ -8,10 +8,7 @@
     "error"
   end
 %>
-<div
-  aria-label="Badge"
-  class="badge border-0 bg-<%= badge_color %>/10 font-medium capitalize text-<%= badge_color %>"
->
+<div aria-label="Badge" class="badge badge-<%= badge_color %> font-medium capitalize">
   <%= domain.status.to_s.titleize %>
 </div>
 <% if domain.status_reason.present? && domain.dns_incorrect? %>
