--- a/app/views/projects/services/jobs/_status.html.erb
+++ b/app/views/projects/services/jobs/_status.html.erb
@@ -9,6 +9,6 @@
     "warning"
   end
 %>
-<div aria-label="Badge" class="badge border-0 bg-<%= badge_color %>/10 font-medium capitalize text-<%= badge_color %>">
+<div aria-label="Badge" class="badge badge-<%= badge_color %> font-medium capitalize">
   <%= status.to_s.humanize %>
 </div>
