--- a/app/views/projects/volumes/_status.html.erb
+++ b/app/views/projects/volumes/_status.html.erb
@@ -8,6 +8,6 @@
     "error"
   end
 %>
-<div aria-label="Badge" class="badge border-0 bg-<%= badge_color %>/10 font-medium capitalize text-<%= badge_color %>">
+<div aria-label="Badge" class="badge badge-<%= badge_color %> font-medium capitalize">
   <%= volume.status %>
 </div>
