--- a/app/views/accounts/teams/show.html.erb
+++ b/app/views/accounts/teams/show.html.erb
@@ -88,7 +88,8 @@
             <span class="label-text">Search for a user</span>
           </label>
           <div class="relative">
-            <input type="text"
+            <input type="search"
+                   inputmode="search"
                    placeholder="Type to search by name or email..."
                    class="input input-bordered w-full focus:outline-offset-0" />
           </div>
@@ -123,7 +124,8 @@
             <span class="label-text">Search for a cluster</span>
           </label>
           <div class="relative">
-            <input type="text"
+            <input type="search"
+                   inputmode="search"
                    placeholder="Type to search clusters..."
                    class="input input-bordered w-full focus:outline-offset-0" />
           </div>
@@ -158,7 +160,8 @@
             <span class="label-text">Search for a project</span>
           </label>
           <div class="relative">
-            <input type="text"
+            <input type="search"
+                   inputmode="search"
                    placeholder="Type to search projects..."
                    class="input input-bordered w-full focus:outline-offset-0" />
           </div>
@@ -193,7 +196,8 @@
             <span class="label-text">Search for an add-on</span>
           </label>
           <div class="relative">
-            <input type="text"
+            <input type="search"
+                   inputmode="search"
                    placeholder="Type to search add-ons..."
                    class="input input-bordered w-full focus:outline-offset-0" />
           </div>
