--- a/app/views/build_packs/_search.html.erb
+++ b/app/views/build_packs/_search.html.erb
@@ -1,6 +1,7 @@
 <div class="relative" data-controller="buildpack-search">
   <input
-    type="text"
+    type="search"
+    inputmode="search"
     placeholder="Search for buildpacks (e.g., ruby, node, python)..."
     class="input input-bordered w-full"
   />
