--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="mb-3">
-          <%= f.email_field :email, class: 'input input-bordered w-full focus:outline-offset-0', placeholder: 'Email Address' %>
+          <%= f.email_field :email, class: 'input input-bordered w-full focus:outline-offset-0', placeholder: 'Email Address', inputmode: "email" %>
         </div>
 
         <div class="mb-3">
