--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
           <%= f.label :email, class: "label" do %>
             <span class="label-text">Email</span>
           <% end %>
-          <%= f.email_field :email, autocomplete: "email", placeholder: true, class: "input input-bordered w-full" %>
+          <%= f.email_field :email, autocomplete: "email", placeholder: true, inputmode: "email", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control">
