--- a/app/views/local/onboarding/_portainer.html.erb
+++ b/app/views/local/onboarding/_portainer.html.erb
@@ -26,6 +26,7 @@
           :email,
           placeholder: "admin@example.com",
           name: "user[email]",
+          inputmode: "email",
           class: "input input-bordered w-full",
           required: true,
         ) %>
