--- a/app/views/projects/services/_overview.html.erb
+++ b/app/views/projects/services/_overview.html.erb
@@ -21,11 +21,11 @@
         <% if service.web_service? %>
           <div class="form-control form-group">
             <%= form.label :container_port %>
-            <%= form.text_field :container_port, class: "input input-bordered w-full", required: false %>
+            <%= form.text_field :container_port, inputmode: "numeric", class: "input input-bordered w-full", required: false %>
           </div>
           <div class="form-control form-group">
             <%= form.label :healthcheck_url %>
-            <%= form.text_field :healthcheck_url, class: "input input-bordered w-full", placeholder: "/health" %>
+            <%= form.text_field :healthcheck_url, inputmode: "url", class: "input input-bordered w-full", placeholder: "/health" %>
             <span class="label-text-alt">Optional: The endpoint just needs to return a 200 status code to be considered healthy</span>
           </div>
           <div class="form-control rounded-lg bg-base-200 p-2 px-4">
@@ -41,7 +41,7 @@
           <h2 class="text-lg my-2 mt-4">Resources</h2>
           <div class="form-control form-group">
             <%= form.label :replicas %>
-            <%= form.number_field :replicas, class: "input input-bordered w-full max-w-xs", placeholder: "1" %>
+            <%= form.number_field :replicas, inputmode: "numeric", class: "input input-bordered w-full max-w-xs", placeholder: "1" %>
           </div>
         </div>
         <% end %>
