--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -9,6 +9,8 @@
       <div class="form-control flex-row items-center rounded-box p-2 px-5">
         <iconify-icon icon="lucide:search" height="18" class="text-base-content/70"></iconify-icon>
         <input
+          type="search"
+          inputmode="search"
           data-global-search-target="input"
           data-action="input->global-search#search"
           placeholder="Search projects, clusters, add-ons..."
