--- a/app/views/accounts/account_users/index.html.erb
+++ b/app/views/accounts/account_users/index.html.erb
@@ -66,7 +66,7 @@
             <label class="label">
               <span class="label-text">Email</span>
             </label>
-            <%= form.text_field :email, type: :email, class: "input input-bordered w-full focus:outline-offset-0" %>
+            <%= form.text_field :email, type: :email, inputmode: "email", class: "input input-bordered w-full focus:outline-offset-0" %>
             <label class="label">
               <span class="label-text-alt">If the user doesn't have an account, you'll get a temporary password to send them.</span>
             </label>
