--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
             <%= f.label :email, class: "label" do %>
               <span class="label-text">Email</span>
             <% end %>
-            <%= f.email_field :email, autofocus: true, placeholder: 'Email address', class: 'input input-bordered' %>
+            <%= f.email_field :email, autofocus: true, placeholder: 'Email address', inputmode: "email", class: 'input input-bordered' %>
           </div>
 
           <div class="form-control mt-6">
