--- a/app/views/integrations/github/repositories/_modal.html.erb
+++ b/app/views/integrations/github/repositories/_modal.html.erb
@@ -10,7 +10,7 @@
         
         <div class="rounded-lg">
           <div class="mb-4">
-            <input type="text" placeholder="Search" class="input input-bordered w-full" data-action="github-select-repository#filterRepositories" />
+            <input type="search" inputmode="search" placeholder="Search" class="input input-bordered w-full" data-action="github-select-repository#filterRepositories" />
           </div>
           <ul
             class="space-y-2 h-64 overflow-y-auto bg-base-100"
