--- a/app/views/projects/services/domains/_index.html.erb
+++ b/app/views/projects/services/domains/_index.html.erb
@@ -8,7 +8,7 @@
         class: "flex gap-2 lg:max-w-xl"
       ) do |form| %>
         <div class="flex-grow">
-          <%= form.text_field :domain_name, class: "input input-bordered w-full", placeholder: "Domain Name", required: true %>
+          <%= form.text_field :domain_name, inputmode: "url", class: "input input-bordered w-full", placeholder: "Domain Name", required: true %>
         </div>
         <%= form.submit "Add Domain", class: "btn btn-primary", data: { disable_with: "Loading..." } %>
       <% end %>
