--- a/app/views/projects/services/resource_constraints/_cpu_slider.html.erb
+++ b/app/views/projects/services/resource_constraints/_cpu_slider.html.erb
@@ -14,6 +14,7 @@
       <%= form.text_field(
         key,
         type: "number",
+        inputmode: "decimal",
         class: "input input-sm input-bordered font-mono text-sm w-[125px] text-right mr-2 #{'opacity-50 cursor-not-allowed' if value.blank?}",
         value: value.present? ? (value / 1000.0) : '',
         step: :any,
