--- a/app/views/projects/create/_new_form_git.html.erb
+++ b/app/views/projects/create/_new_form_git.html.erb
@@ -39,35 +39,49 @@
 
         <div data-new-project-target="gitRepository" class="hidden">
           <div class="form-control mt-1 w-full max-w-sm">
-            <div data-controller="github-select-repository">
-              <label class="label">
-                <span class="label-text"><span data-new-project-target="gitProviderLabel">Github</span> Repository</span>
-              </label>
+            <label class="label">
+              <span class="label-text"><span data-new-project-target="gitProviderLabel">Github</span> Repository</span>
+            </label>
 
-              <%= form.text_field(
-                :repository_url,
-                class: "input input-bordered w-full focus:outline-offset-0",
-                placeholder: "accountname/repo",
-                data: {
-                  "github-select-repository-target": "repository",
-                }
-              ) %>
-              <div class="flex justify-between mt-2">
-                <label class="label">
-                  <span class="label-text-alt">* Required</span>
-                </label>
-                <button
-                  class="btn btn-sm btn-outline"
-                  type="button"
-                  data-action="github-select-repository#connectToGithub"
-                  data-github-select-repository-target="button"
-                  data-disable-with="Loading..."
-                  data-new-project-target="githubConnectButton"
-                >
-                  Connect with Github <iconify-icon icon="mdi:github" width="24" height="24"></iconify-icon>
-                </button>
+            <%= form.text_field(
+              :repository_url,
+              class: "input input-bordered w-full focus:outline-offset-0",
+              placeholder: "accountname/repo",
+              id: "project_repository_url",
+              data: { "new-project-target": "repositoryUrl" }
+            ) %>
+            <div class="flex justify-between items-center mt-2">
+              <label class="label">
+                <span class="label-text-alt">* Required</span>
+              </label>
+              <div>
+                <div data-controller="git-select-repository" data-git-select-repository-endpoint-value="/integrations/github/repositories" data-git-select-repository-repository-id-value="project_repository_url" data-git-select-repository-provider-select-id-value="provider_select">
+                  <button
+                    class="btn btn-sm btn-outline hidden"
+                    type="button"
+                    data-action="git-select-repository#openModal"
+                    data-git-select-repository-target="button"
+                    data-disable-with="Loading..."
+                    data-new-project-target="githubConnectButton"
+                  >
+                    Connect with Github <iconify-icon icon="mdi:github" width="24" height="24"></iconify-icon>
+                  </button>
+                  <%= render "integrations/repositories/modal", provider: "github" %>
+                </div>
+                <div data-controller="git-select-repository" data-git-select-repository-endpoint-value="/integrations/gitlab/repositories" data-git-select-repository-repository-id-value="project_repository_url" data-git-select-repository-provider-select-id-value="provider_select">
+                  <button
+                    class="btn btn-sm btn-outline hidden"
+                    type="button"
+                    data-action="git-select-repository#openModal"
+                    data-git-select-repository-target="button"
+                    data-disable-with="Loading..."
+                    data-new-project-target="gitlabConnectButton"
+                  >
+                    Connect with GitLab <iconify-icon icon="mdi:gitlab" width="24" height="24"></iconify-icon>
+                  </button>
+                  <%= render "integrations/repositories/modal", provider: "gitlab" %>
+                </div>
               </div>
-              <%= render "integrations/github/repositories/modal" %>
             </div>
           </div>
 
