--- a/app/views/projects/create/_select_credentials.html.erb
+++ b/app/views/projects/create/_select_credentials.html.erb
@@ -4,11 +4,12 @@
     selectable_providers,
     :id,
     :friendly_name,
-    { 
+    {
       include_blank: selectable_providers.count >= 1,
       selected: selectable_providers.count == 1 ? selectable_providers.first.id : nil
     },
     {
+      id: "provider_select",
       class: "select select-bordered w-full",
       required: true,
       data: {
